Mon Apr 19 15:21:08 1999  Jakub Jelinek  <jj@ultra.linux.cz>

	* lspci.c: Display I/O addresses correctly on sparc64.
	* lib/header.h: Ditto.

	* lib/configure: On sparc set HAVE_64BIT* as well, we want
	a binary which works on both 32bit and 64bit SPARCs.

Sun Apr 18 21:14:58 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c, lib/proc.c: Alpha compilation fixes from Matthew Jacob
	<mjacob@feral.com>.

	* pci.ids: A lot of updates from Adam J. Richter <adam@yggdrasil.com>.

Sun Feb 28 22:26:21 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (do_map_bus): Don't dump functions 1--7 if not flagged
	as a multi-function device, because several single-function devices
	don't decode the function bits at all.

Sun Feb 14 23:48:22 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile (install): Don't use "-o root -g root" for installation
	since it breaks on machines where programs are not installed by root.
	Reported by Richard Gooch <rgooch@atnf.csiro.au>

Tue Feb  9 15:54:39 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_bases): Use new address masking macros and pciaddr_t.

	* lib/pci.h: Using pciaddr_t for bus addresses, which are 32-bit
	or 64-bit depending on CPU.

	* lib/pci.h (PCI_ADDR_MEM_MASK): Added macros for address masks
	according to bus address width.

Thu Jan 28 20:54:16 1999  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 1.99.4.

	* lspci.c: Capability list parser now recognizes both AGP
	registers and PCI Power Management registers (the latter
	is mainly guesswork based on DEC/Intel 21153 bridge specs
	since I don't have the PCI Power Management document).

	* lspci.c: Replaced numerous occurences of (x & flag) ? '+' : '-'
	by FLAG macro.

	* lspci.c: Added bridge checks to bus mapping code.

Wed Jan 27 14:59:16 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c: Implemented bus mapping mode (-M).

	* lspci.c (scan_devices): Split to scan_devices() and scan_device().
	(show): Split to show() and show_device().
