@@ -1,4 +1,4 @@
-This package contains the Linux PCI Utilities, version 1.99.5-alpha.
+This package contains the PCI Utilities, version 2.0.
 
 Copyright (c) 1997--1999 Martin Mares <mj@atrey.karlin.mff.cuni.cz>
 
@@ -8,23 +8,13 @@ to the terms of the GNU General Public License, either version 2 or
 policy as for the Linux kernel itself -- see /usr/src/linux/COPYING
 for details.
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-BIG FAT WARNING: This is an ALPHA version. The documentation is out of date
-		 and the same holds for spec files and even for this README.
-		 And, of course, you should expect this release to contain BUGS.
 
-WHY ALPHA?	 I've split the real PCI access primitives from the rest
-		 of the code and created libpci, which supports not only
-		 /proc/bus/pci, but also direct hardware access and reading
-		 of configuration space dumps and it's intended to work
-		 on all Linux versions and even on non-Linux systems, making
-		 creation of portable programs communicating with PCI devices
-		 possible.
+   The PCI Utilities package contains a library for portable access to PCI bus
+configuration space and several utilities based on this library. Current
+version works only on Linux, but it can be easily extended to work on other
+systems as well.
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-   The Linux PCI Utilities contain various utilities for dealing with the PCI
-bus in Linux:
+   The utilities include:  (See manual pages for more details)
 
 	- lspci: displays detailed information about all PCI busses and devices
 	  in the system, replacing the original /proc/pci interface.
@@ -32,13 +22,15 @@ bus in Linux:
 	- setpci: allows to read from and write to PCI device configuration
 	  registers. For example, you can adjust the latency timers with it.
 
-   See manual pages for more details.
+   The library (and therefore all the utilities) can access PCI registers
+either via the /proc/bus/pci interface present since Linux 2.1.82 or
+via direct hardware access (to be used with older kernels and also for
+hardware diagnostics). It's also capable of reading and interpreting
+register dumps printed by `lspci -x'. Unfortunately, there is no documentation
+on how to use the library yet, so if you want to play with it, just ask
+me for whatever you want.
 
    To compile the package, just run "make". To install it, "make install".
-
-   You need kernel 2.1.82 or newer to use all functions of this package.
-For older kernels, only direct hardware access is supported and you must
-be root to use it.
 
    If you have any bug reports or suggestions, send them to the author.
 
@@ -48,9 +40,7 @@ Release notes about new versions will be send to the list and problems with
 the Linux PCI support will be probably discussed there, too.
 
    You also might want to look at the pciutils web page containing release
-notes and other news: http://atrey.karlin.mff.cuni.cz/~mj/pciutils.html.
+notes and other news: http://atrey.karlin.mff.cuni.cz/~mj/pciutils.html .
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-TODO:
-	- lib: "syscall" access method
+					Have fun
+							Martin
